--- a/prototype/style.css
+++ b/prototype/style.css
@@ -12,9 +12,9 @@
             gap: 20px; 
             max-width: 900px; 
             margin: 0 auto; 
-            background-color: white; 
+            background-color: rgb(255, 255, 255); 
             padding: 20px; 
-            border: 1px solid #ccc; 
+            border: 1px solid #0d0c0c; 
         }
 
         header {
@@ -45,6 +45,7 @@
             padding: 15px; 
             border: 1px solid #ddd; 
             border-radius: 5px; 
+            box-shadow: 2px 2px 6px gray;
         }
 
         ul {
