--- a/réalisation/contact.css
+++ b/réalisation/contact.css
@@ -13,8 +13,9 @@ body{
     grid-template-rows: 1fr 5fr 1fr ;
     gap:5px;
     height: 100vh;
-    max-width: 1270px;
-    margin:  0;
+   max-width: 1270px;
+margin: 0 auto; 
+
 }
 
 
@@ -50,17 +51,18 @@ nav{
     border: 1px solid rgb(174, 174, 174);
     font-size: 23px;
     font-weight: bold;
-    background-color: #000000;
+    background-color: rgb(43, 177, 226);
     border-radius: 10px;
     box-shadow: 4px 4px 9px rgb(21, 21, 21);
 }
 a{
     text-decoration: none;  
-    color: #ffffff;
+    color: #f8f8f8;
+    font-weight: bold;
     
 }
 a:hover{
-    color: #2496e7;
+    color: #000000;
     border-radius: 10px;
 }
 
@@ -82,7 +84,6 @@ footer{
 }
 section{
     width: 100%;
-    height: 100%;
 }
 
 fieldset{
