--- a/réalisation/cv.css
+++ b/réalisation/cv.css
@@ -100,7 +100,11 @@ a{
   text-decoration: none;  
   color: #000;
   font-size: 20px;
+  font-weight: bold;
   
+}
+a:hover{
+  color: #fff;
 }
 
 
